package hearts;

option java_package = "org.bitcoma.hearts.model.transfered";
option java_outer_classname = "GameProtos";
option optimize_for = SPEED;

message GameEndedResponse {

	// Again just an indicator.
	// Should have full scores from the ScoreUpdateResponse

}
