package hearts;

option java_package = "org.bitcoma.hearts.model.transfered";
option java_outer_classname = "TrickProtos";
option optimize_for = SPEED;

message TrickEndedResponse {

	optional uint64 loser_id = 1;	
	
}
